--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,16 @@ ENV/
 
 # mypy
 .mypy_cache/
+
+# Mac
+.DS_Store
+
+# Ignore everything in this directory
+target
+.classpath
+.settings
+.project
+*.iml
+*.iws
+*.ipr
+.idea
