--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
-  "attack": ["PortVulnerabilityTest", "ArpSpoof"],
+  "attack": ["FakeServer"],
+  "interfaces": "eth0,en0",
   "mac_addresses":[],
   "ArpSpoof": {
     "execution_timeout_in_seconds": 10
@@ -7,6 +8,18 @@
 
   "PortVulnerabilityTest": {
     "port_range": "0-1024"
+  },
+
+  "DnSpoof": {
+    "execution_timeout_in_seconds": 10,
+    "domain": "hamza.com",
+    "poisoned_ip": "192.168.1.100"
+  },
+
+  "FakeServer": {
+    "execution_timeout_in_seconds": 300,
+    "domain": "hamza.com",
+    "poisoned_ip": "157.240.8.35"
   }
 
 }
