--- a/config.json
+++ b/config.json
@@ -1,9 +1,14 @@
 {
-  "attack": ["FakeServer"],
+  "attack": ["ArpSpoof", "EntropyEstimation"],
   "interfaces": "eth0,en0",
   "mac_addresses":[],
   "ArpSpoof": {
-    "execution_timeout_in_seconds": 10
+    "execution_timeout_in_seconds": 10,
+    "tcpdump": true
+  },
+
+  "EntropyEstimation": {
+
   },
 
   "PortVulnerabilityTest": {
@@ -19,7 +24,8 @@
   "FakeServer": {
     "execution_timeout_in_seconds": 300,
     "domain": "hamza.com",
-    "poisoned_ip": "157.240.8.35"
+    "poisoned_ip": "157.240.8.35",
+    "tcpdump": false
   },
 
   "LandDoS": {
