added initial commit for report generator

--- a/config.json
+++ b/config.json
@@ -18,7 +18,7 @@
     "port_range": "0-10",
     "udp": false,
     "optimization": "-T4 --max-retries 3 --min-parallelism 20 --stats-every 1m",
-    "result": {"tcp": {"filtered": [], "open": [53, 49153]}, "udp": {"filtered": [], "open": [53, 1900, 3111, 7638, 13965, 14675, 17143, 19422, 22894, 23835, 26011, 27047, 38849, 40014, 41970, 42518, 43403, 47836, 53121, 53330, 55353, 65484]}}
+    "result": {"tcp": {"filtered": [], "open": [53, 49153]}, "udp": {"filtered": [], "open": [53]}}
   },
 
   "DnSpoof": {
@@ -28,23 +28,24 @@
   },
 
   "TcpConnectionFlood" : {
-    "execution_timeout_in_seconds": 120
+    "execution_timeout_in_seconds": 180
   },
 
   "FakeServer": {
     "execution_timeout_in_seconds": 300,
     "domain": "example.com",
     "poisoned_ip": "157.240.8.35",
-    "tcpdump": false
+    "tcpdump": true,
+    "file_prefix": "fake_server"
   },
 
   "LandDoS": {
     "packet_count": 10,
     "data_size": 100,
     "interval": "1",
-    "tcpdump": false,
+    "tcpdump": true,
     "file_prefix": "land_dos",
-    "vulnerability_validation": false,
+    "vulnerability_validation": true,
     "__comment__" : "interval -- u prefix is to denote micro seconds, default value is in seconds, data size is in bytes"
   },
 
@@ -81,7 +82,7 @@
   "Snmp": {
     "packet_count": 1,
     "tcpdump": true,
-    "file_prefix": "ssnp"
+    "file_prefix": "snmp"
   },
 
 
