--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "attack": ["PortVulnerabilityTest", "LandDoS", "TcpSyn", "PingOfDeath", "TcpConnectionFlood", "UdpFlood", "Smurf", "Ssdp", "Snmp"],
+  "attack": ["PortVulnerabilityTest", "Smurf", "Ssdp"],
   "interfaces": "eth0,en0",
   "mac_address":"EC:1A:59:79:50:1D",
   "default_gateway":"",
@@ -18,7 +18,7 @@
     "port_range": "0-6",
     "udp": false,
     "optimization": "-T4 --max-retries 2 --max-rtt-timeout 300ms --min-parallelism 20 --stats-every 1m",
-    "result": {"tcp": {"filtered": [], "open": [53, 49153]}, "udp": {"filtered": [], "open": [53, 1900, 3080, 3081, 3082, 3179, 3229, 3236, 3619, 4050, 4052, 4053, 4054, 4055, 4289, 4996, 4997, 4998, 14675]}}
+    "EC:1A:59:79:50:1D": {"tcp": {"filtered": [], "open": [53, 49153]}, "udp": {"filtered": [], "open": [53, 1900, 3080, 3081, 3082, 3179, 3229, 3236, 3619, 4050, 4052, 4053, 4054, 4055, 4289, 4996, 4997, 4998, 14675]}}
   },
 
   "DnSpoof": {
@@ -71,13 +71,14 @@
     "packet_count": 10,
     "tcpdump": true,
     "file_prefix": "smurf",
-    "type":"unicast"
+    "type":"broadcast"
   },
 
   "Ssdp": {
     "packet_count": 1,
     "tcpdump": true,
-    "file_prefix": "ssdp"
+    "file_prefix": "ssdp",
+    "type":"unicast"
   },
 
   "Snmp": {
