--- a/config.json
+++ b/config.json
@@ -1,12 +1,12 @@
 {
-  "attack": ["PortVulnerabilityTest", "Smurf", "Ssdp"],
+  "attack": ["ArpSpoof"],
   "interfaces": "eth0,en0",
-  "mac_address":"EC:1A:59:79:50:1D",
+  "mac_address":["EC:1A:59:79:50:1D"],
   "default_gateway":"",
   "interval_between_attacks_in_seconds": 10,
   "blockPrint": true,
   "ArpSpoof": {
-    "execution_timeout_in_seconds": 10,
+    "execution_timeout_in_seconds": 1000,
     "tcpdump": true
   },
 
@@ -17,8 +17,14 @@
   "PortVulnerabilityTest": {
     "port_range": "0-6",
     "udp": false,
-    "optimization": "-T4 --max-retries 2 --max-rtt-timeout 300ms --min-parallelism 20 --stats-every 1m",
-    "EC:1A:59:79:50:1D": {"tcp": {"filtered": [], "open": [53, 49153]}, "udp": {"filtered": [], "open": [53, 1900, 3080, 3081, 3082, 3179, 3229, 3236, 3619, 4050, 4052, 4053, 4054, 4055, 4289, 4996, 4997, 4998, 14675]}}
+    "optimization": "--min-parallelism 100 --stats-every 1m",
+    "EC:1A:59:79:50:1D": {"tcp": {"filtered": [], "open": [53, 49154]}, "udp": {"filtered": [], "open": [53, 1900]}},
+    "EC:1A:59:79:F4:89": {"tcp": {"filtered": [], "open": [53, 49154]}, "udp": {"filtered": [], "open": [53, 1900]}}
+  },
+
+  "Replay": {
+    "file_path": "",
+    "interval_in_seconds": 1
   },
 
   "DnSpoof": {
@@ -87,10 +93,8 @@
     "file_prefix": "snmp"
   },
 
-
-
   "PasswordAttack": {
-
+    "credential_file_path": "credentials.csv"
   }
 
 
