--- a/config.json
+++ b/config.json
@@ -1,12 +1,12 @@
 {
-  "attack": ["PasswordAttack"],
+  "attack": ["Replay"],
   "interfaces": "eth0,en0",
   "mac_address":["EC:1A:59:79:F4:89"],
   "default_gateway":"",
   "interval_between_attacks_in_seconds": 10,
   "blockPrint": false,
   "ArpSpoof": {
-    "execution_timeout_in_seconds": 120,
+    "execution_timeout_in_seconds": 60,
     "tcpdump": true,
     "gateway_ip":""
   },
@@ -26,7 +26,7 @@
   },
 
   "Replay": {
-    "file_path": "results/2017_09_09_13_18_13/arpCC:FA:00:F0:54:09.pcap",
+    "file_path": "results/2017_09_11_08_23_13/arpCC:FA:00:F0:54:09.pcap",
     "interval_in_seconds": 0.4,
     "source_ip": ""
   },
